Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignObjectBoolean.quorum
class Main
    action Main
        Object v = Test()
    end

    action Test() returns Object
        boolean var = true
        return var
    end
end